# flipkart-gridlock-round-1

./: CLAUDE.md  PROBLEM.md  README.md  pyproject.toml  requirements.txt
.claude/agent-memory/ml-architect-validator/: MEMORY.md  project_gridlock-cv-leak.md  project_gridlock-data-structure.md  project_gridlock-experiments.md  project_gridlock-modeling-decisions.md
.claude/agents/: code-quality-refactor.md  ml-architect-validator.md  performance-optimizer.md
artifacts/: eval.json  feature_stats.json  folds.npy  metrics.json  oof_cat.npy  oof_et.npy  oof_lgbm.npy  oof_xgb.npy  y_log.npy
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
logs/: RUNBOOK.md  runs.jsonl  session_01_initial_baseline.md  session_02_ml_architect_v1.md  session_03_ml_architect_v2.md
source/: 01_overview.md  02_data_and_cv.md  03_feature_engineering.md  04_models_and_ensemble.md  05_results.md  approach.ipynb
src/: __init__.py  config.py  data.py  evaluation.py  features.py  main.py  model.py  preprocessing.py  reporting.py
submissions/: source.tar.xz  submission.csv
tests/: conftest.py  test_features.py  test_model_outputs.py
