[project]
name = "gridlock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "lightgbm",
    "catboost",
    "geohash2",
    "optuna",
    "rich",
    "jupyter",
    "notebook",
    "ipykernel",
]
